Kyverno/1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
