Kyverno/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.security.kubernetes.io: pass
    spec:
      containers:
      - name: nginx
        image: nginx:latest
